--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -2,7 +2,7 @@
   height: 40px;
   width: 120px;
   border-radius: 10px;
-
+  background-color: cornflowerblue;
   font-size: 30px;
   font-weight: 700;
 }
