--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 10px;
   align-items: center;
   border: 2px cornflowerblue solid;
   /* background-color: powderblue; */
@@ -57,6 +58,10 @@
   color: red;
 }
 
+.errorText {
+  font-size: 40px;
+  color: red;
+}
 input {
   text-align: center;
   outline-color: cornflowerblue;
